--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
@@ -15,7 +15,7 @@
                                     </div>
 
                                     <div class="col align-self-center">
-                                        <input type="file" accept="image/png, image/jpeg" #files class="d-none"
+                                        <input type="file" accept="image/*" #files class="d-none"
                                             (input)="getFileInfo($event,'profile')" />
                                         <label (click)="webcam();" class="kt-pointer text-primary mandatory"
                                             style="font-weight: 600;">Upload Profile
@@ -190,8 +190,8 @@
                                                     id="basic-addon2" (click)="signature.click()"
                                                     style="border-top-right-radius: 9px !important; border-bottom-right-radius: 9px !important;">Attach</span>
                                             </div>
-                                            <input type="file" accept="image/png, image/jpeg" class="d-none" #signature
-                                                (input)="getFileInfo($event,'signature')">
+                                            <input type="file" accept="image/*,application/pdf" class="d-none"
+                                                #signature (input)="getFileInfo($event,'signature')">
                                         </div>
                                     </div>
                                 </div>
