pkt-fe::loan process complete

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.html
@@ -184,6 +184,10 @@
                                 <button class="primary-button">{{loan.loanStage.name | uppercase}}</button>
                             </div>
 
+                            <div *ngIf="loan.loanStage.id == 13">
+                                <button class="primary-button">{{loan.loanStage.name | uppercase}}</button>
+                            </div>
+
                         </div>
                     </mat-cell>
                 </ng-container>
