--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
@@ -4,6 +4,23 @@
 			<div class="col-6 align-self-center">
 				<form action="" [formGroup]="userBasicForm">
 
+					<div *ngIf="controls.moduleId.value == 3" class="row kt-padding-t-15">
+						<div class="col-4 align-self-center form-label">
+							<label class="mandatory">User Type </label>
+						</div>
+						<div class="col-8">
+							<select class="form-control" formControlName="userType"
+								(change)='changeUserType($event.target.value)'>
+								<option value=null selected disabled>Select User Type</option>
+								<option value="Individual">Individual</option>
+								<option value="Corporate">Corporate</option>
+							</select>
+							<mat-error *ngIf="controls.userType.invalid && controls.userType.invalid">
+								Field Required
+							</mat-error>
+						</div>
+					</div>
+
 					<div class="row kt-padding-t-15">
 						<!-- Mobile -->
 						<div class="col-4 align-self-center form-label">
@@ -128,7 +145,7 @@
 						</div>
 						<div class="col-8">
 							<select class="form-control" formControlName="panType" (change)='remove()'>
-								<option value=null selected disabled>Select</option>
+								<option value='' selected disabled>Select</option>
 								<option value="pan">PAN</option>
 								<option value="form60">FORM 60</option>
 							</select>
@@ -197,9 +214,9 @@
 									[class.isError]="controls.form60.touched && controls.form60.invalid" />
 								<div class="input-group-append">
 									<span class="input-group-text bg kt-pointer font-weight" id="basic-addon2"
-										(click)="form60.click()">Attach</span>
+										(click)="pan.click()">Attach</span>
 								</div>
-								<input type="file" class="d-none" accept="image/*,application/pdf" #form60
+								<input type="file" class="d-none" accept="image/*,application/pdf" #pan
 									(input)="getFileInfo($event)">
 							</div>
 						</div>
@@ -218,9 +235,9 @@
 									(click)="preview(controls?.panImg.value)" [src]="controls.panImg.value"
 									style="border-radius: 15px;" alt="" />
 								<img src="../../../../../assets/media/icons/edit.svg" alt=""
-									class="kt-pointer remove-icon" (click)="form60.click()"
+									class="kt-pointer remove-icon" (click)="editPan.click()"
 									*ngIf="controls.panImg.value && !(controls.panType.status == 'DISABLED')">
-								<input type="file" class="d-none" accept="image/*,application/pdf" #form60
+								<input type="file" class="d-none" accept="image/*,application/pdf" #editPan
 									(input)="getFileInfo($event)">
 								<div class="iframeWrapper" (click)="preview(controls?.panImg.value)">
 									<iframe [src]="controls?.panImg.value | safe : 'resourceUrl'" height="250"
@@ -229,6 +246,43 @@
 							</div>
 						</div>
 					</div>
+
+					<div *ngIf="controls.userType.value === 'Corporate'">
+						<div class="row kt-padding-t-15">
+							<div class="col-4 align-self-center form-label">
+								<label class="mandatory">Organization Type</label>
+							</div>
+							<div class="col-8">
+								<select class="form-control" formControlName="organizationTypeId">
+									<option value=null selected disabled>Select User Type</option>
+									<option [value]="item.name" *ngFor="let item of organizationTypes">
+										{{ item.name | titlecase }}</option>
+								</select>
+								<mat-error
+									*ngIf="controls.organizationTypeId.invalid && controls.organizationTypeId.invalid">
+									Field Required
+								</mat-error>
+							</div>
+						</div>
+
+						<div class="row kt-padding-t-15">
+							<div class="col-4 align-self-center form-label">
+								<label class="mandatory">Date of Incorporation</label>
+							</div>
+							<div class="col-8">
+								<input type="text" class="form-control" [matDatepicker]="picker" (click)="picker.open()"
+									formControlName="dateOfIncorporation"
+									[class.isError]="controls.dateOfIncorporation.touched && controls.dateOfIncorporation.invalid"
+									readonly placeholder="DD/MM/YYYY">
+								<mat-datepicker #picker></mat-datepicker>
+								<mat-error
+									*ngIf="controls.dateOfIncorporation.invalid && controls.dateOfIncorporation.invalid">
+									Field Required
+								</mat-error>
+							</div>
+						</div>
+					</div>
+
 
 					<div class="row kt-margin-t-10 kt-margin-b-20">
 						<div class="col-8 offset-4">
