--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
@@ -75,8 +75,8 @@
                             <div>
                                 {{element?.paymentRecievedDate ? (element?.paymentRecievedDate | date:'MMM d, y') : '-'}}
                             </div>
-                            <div>{{element?.paymentRecievedDate ? (element?.paymentRecievedDate | date:'h:mm a') : ''}}
-                            </div>
+                            <!-- <div>{{element?.paymentRecievedDate ? (element?.paymentRecievedDate | date:'h:mm a') : ''}}
+                            </div> -->
                         </div>
                     </mat-cell>
                 </ng-container>
